# py-log-analyzer

./: .gitignore  README.md  pyproject.toml  setup.cfg
log_explorer/: tui.py
log_explorer/inference/: __init__.py  app_log_detectors.py  base_detector.py  inference_engine.py  line_patterns.py  log_core.py  structured_detectors.py  syslog_detectors.py  timestamp_detector.py  timestamp_patterns.py  utils.py  web_log_detectors.py
log_explorer/parser/: __init__.py  app_log_parsers.py  base_parser.py  parsing_engine.py  structured_parsers.py  syslog_parsers.py  web_log_parsers.py
log_explorer/search/: search_engine.py
log_explorer/stats/: analyzer.py
log_explorer/tests/: test_app_log_detectors.py  test_search_functionality.py  test_structured_detectors.py  test_syslog_detectors.py  test_timestamp_detector.py  test_web_log_detectors.py
