[metadata]
name = py-log-analyzer
version = 0.1.0
description = Analyze, visualize, and explore log files
long_description = file: README.md
long_description_content_type = text/markdown
author = MS-32154
license = MIT

[options]
packages = find:
install_requires =
    windows-curses; sys_platform == "win32"
python_requires = >=3.7

[options.entry_points]
console_scripts =
    log_explorer = log_explorer.tui:main

[options.extras_require]
dev =
    pytest